# logicsim

./: .gitignore  Cargo.toml  LICENSE  README.md  README.tpl  perf.data  perf.data.old  pgo.sh  profile.sh  tarpaulin-report.html
.github/workflows/: rust.yml
examples/: adder.rs  computer.rs  rom.rs
examples/computer/: assembler.rs  clock_timer.rs  computer.rs  control_logic.rs  instruction_set.rs  main.rs  stdin_peekable.rs
examples/computer/programs/: echo.rs  greeter.rs  hello_world.rs  mod.rs  multiply.rs
src/: bititer.rs  double_stack.rs  graph.rs  lib.rs  main.rs  slab.rs  state.rs
src/circuits/: adder.rs  alu.rs  aluish.rs  bus.rs  bus_multiplexer.rs  constant.rs  control_signals_set.rs  counter.rs  d_flip_flop.rs  decoder.rs  io_buffer.rs  io_register.rs  jk_flip_flop.rs  mod.rs  multiplexer.rs  output_register.rs  ram.rs  register.rs  rom.rs  sr_latch.rs  wire.rs  word_input.rs
src/data_structures/: bit_iter.rs  bititer.rs  double_stack.rs  immutable.rs  mod.rs  slab.rs  slab_unstable.rs  state.rs
src/graph/: gate.rs  graph_builder.rs  handles.rs  initialized_graph.rs  mod.rs  types.rs
src/graph/optimizations/: const_propagation.rs  dead_code_elimination.rs  dependency_deduplication.rs  duplicate_dependency_elimination.rs  equal_gate_merging.rs  global_value_numbering.rs  mod.rs  not_deduplication.rs  single_dependency_collapsing.rs
