[package]
name = "logicsim"
version = "0.1.0"
authors = ["raycar5 <none@ofyourbusiness.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true
[features]
default = ["debug_gates"]

debug_gates = []
logicsim_unstable = []

[dependencies]
colour = "0.5.0"
bitvec = "0.19.4"
smallvec = "1.5.0"
num_enum="0.5.1"
num-integer = "0.1.44"
petgraph = "0.5.1"
unwrap = "1.2.1"
indexmap = "1.6.0"
strum = "0.19.5"
strum_macros = "0.19.4"
concat-idents = "1.0.0"
termion = "1.5.5"
casey = "0.3.3"
