[package]
authors = ["raycar5 <none@ofyourbusiness.com>"]
categories = ["simulation", "embedded"]
description = "composable, modular, digital logic simulation"
edition = "2018"
keywords = ["digital", "logic", "simulator", "gates", "emulator"]
license = "MIT"
name = "logicsim"
readme = "README.md"
repository = "https://github.com/raycar5/logicsim"
version = "0.1.6"

[profile.release]
debug = true
[features]
default = ["debug_gates"]

debug_gates = []
logicsim_unstable = []

[dependencies]
casey = "0.3.3"
concat-idents = "1.0.0"
indexmap = "1.6.0"
num-integer = "0.1.44"
petgraph = "0.5.1"
smallvec = "1.5.0"
unwrap = "1.2.1"

[dev-dependencies]
auto_from = "0.3.0"
ctrlc = "3.1.7"
num_enum = "0.5.1"
strum = "0.20.0"
strum_macros = "0.20.1"
